add conduit library

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -29,7 +29,9 @@
 <section id="features" class="container services">
     <div class="row">
         <div class="col-sm-4">
+
             <h2>SAAS Web Apps</h2>
+            <button ng-click="send()">TEst</button>
             <p>SAAS - (Software as a Service) allows you provide a software service to your customers. This service could be used to retain existing customers and or provide residual income.</p>
             <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
             <br>
