add conduit library

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -12,7 +12,7 @@
                     </p>
                 </div>
 
-                <img alt="Carousel Bootstrap First" src="../img/header_one.png">
+                <img alt="Carousel Bootstrap First" src="./img/header_one.png">
             </div>
         </div>
         <a class="left carousel-control" data-slide="prev" data-target="#carousel_inSlider" role="button">
