--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -31,7 +31,7 @@
         <div class="col-sm-4">
 
             <h2>SAAS Web Apps</h2>
-            <button ng-click="send()">TEst</button>
+            <button ng-click="importKole()">Import Kole data</button>
             <p>SAAS - (Software as a Service) allows you provide a software service to your customers. This service could be used to retain existing customers and or provide residual income.</p>
             <p><a class="navy-link" href="#" role="button">Details &raquo;</a></p>
             <br>
